--- a/Consultor3D/public/index.html
+++ b/Consultor3D/public/index.html
@@ -2,115 +2,39 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8" />
-  <title>Consultor 3D</title>
+  <title>IA de Auto Cuidado Masculino</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="./style.css" rel="stylesheet" />
-  <script src="./app.js" type="module"></script>
-  <!-- Three.js CDN -->
-  <script src="https://unpkg.com/three@0.161.0/build/three.min.js"></script>
-  <script src="https://unpkg.com/three@0.161.0/examples/js/controls/OrbitControls.js"></script>
 </head>
 <body>
   <div class="app">
-    <aside class="left">
-      <h1>Avatar & Configurações</h1>
-
-      <div class="grid">
-        <label>Ocasião
-          <select id="occasion">
-            <option value="casual moderno">Casual moderno</option>
-            <option value="esporte fino">Esporte fino</option>
-            <option value="social clássico">Social clássico</option>
-            <option value="streetwear">Streetwear</option>
-          </select>
-        </label>
-
-        <label>Formato do rosto
-          <select id="faceShape">
-            <option>oval</option>
-            <option>redondo</option>
-            <option>quadrado</option>
-            <option>triangular</option>
-            <option>retangular</option>
-          </select>
-        </label>
-
-        <label>Tom de pele
-          <select id="skinTone">
-            <option>claro</option>
-            <option>médio</option>
-            <option>moreno</option>
-            <option>escuro</option>
-          </select>
-        </label>
-
-        <label>Cabelo
-          <select id="hairStyle">
-            <option value="curto clássico">Curto clássico</option>
-            <option value="médio ondulado">Médio ondulado</option>
-            <option value="longo liso">Longo liso</option>
-            <option value="careca">Careca</option>
-          </select>
-        </label>
-
-        <label class="row">Barba
-          <input type="checkbox" id="beard" />
-        </label>
-
-        <label>Camisa (cor)
-          <input type="color" id="shirtColor" value="#4a90e2" />
-        </label>
-
-        <label>Calça (cor)
-          <input type="color" id="pantsColor" value="#2c3e50" />
-        </label>
-
-        <label class="row">Anotações extras
-          <textarea id="notes" placeholder="Ex.: tênis branco minimalista, relógio metálico..."></textarea>
-        </label>
+    <main class="full landing">
+      <div class="hero">
+        <h1>IA de Auto Cuidado Masculino</h1>
+        <p class="subtitle">Seu assistente pessoal com IA para estilo e bem-estar</p>
       </div>
 
-      <div class="preview-card">
-        <div class="preview-header">
-          <span>Preview 3D</span>
-          <button id="resetCam" class="btn ghost">Recentrar</button>
-        </div>
-        <canvas id="avatarCanvas"></canvas>
+      <div class="summary">
+        <h2>Para que serve?</h2>
+        <p>A IA de Auto Cuidado Masculino é uma ferramenta inovadora que utiliza inteligência artificial para fornecer conselhos personalizados e práticos sobre diversos aspectos do cuidado pessoal masculino. Seja você um homem que busca melhorar seu estilo, cuidados com a aparência ou simplesmente dicas para o dia a dia, nosso consultor está aqui para ajudar.</p>
+
+        <p>Com base em dados como altura, cor de pele, formato do rosto e preferências pessoais, a IA oferece orientações objetivas em:</p>
+
+        <ul>
+          <li>Roupas adequadas para cada ocasião</li>
+          <li>Perfumes e famílias olfativas</li>
+          <li>Cuidados com cabelo e barba</li>
+          <li>Postura, fala e etiqueta</li>
+          <li>Dicas de liderança e feedback</li>
+        </ul>
+
+        <p>Seja prático, use passos claros e exemplos reais para transformar seu visual e confiança.</p>
       </div>
 
-      <button id="btnGenerate" class="btn">Gerar Imagem com IA</button>
-    </aside>
-
-    <main class="right">
-      <section class="chat">
-        <h2>Consultor de Estilo (IA)</h2>
-
-        <div class="quick">
-          <button class="chip">Qual tênis combina?</button>
-          <button class="chip">Preciso de look social barato</button>
-          <button class="chip">Cores que harmonizam</button>
-        </div>
-
-        <div id="messages" class="messages"></div>
-
-        <div class="composer">
-          <input id="prompt" placeholder="Pergunte algo ao consultor..." />
-          <button id="send" class="btn">Enviar</button>
-        </div>
-      </section>
-
-      <section class="image">
-        <h2>Imagem Gerada</h2>
-        <div id="imgWrap" class="img-wrap">
-          <div class="placeholder">Nenhuma imagem ainda</div>
-        </div>
-        <details class="prompt-used">
-          <summary>Ver prompt usado</summary>
-          <pre id="promptUsed"></pre>
-        </details>
-      </section>
+      <div class="actions">
+        <a href="./chat.html" class="btn primary">Acessar Consultor 3D</a>
+      </div>
     </main>
   </div>
-
 </body>
 </html>
